# tmdbapi

./: .appveyor.yml  .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  LICENCE  README.md  build-windows.bat  cppcheckscript.bat  sonar-project.properties  sonarcheck.bat
cmake/: req.cmake  sonar.cmake  src.cmake  tests.cmake
cmake/modules/: Findrapidjson.cmake
include/tmdb/: ApiGet.h  ApiGetJson.h  Configuration.h  ImageDownloader.h  Iso.h  IsoTypes.h  Util.h  config.h  configuration.h  iso.h  isoTypes.h  util.h
include/tmdb/common/: CastAndCrew.h  People.h  ProductionCompany.h  Videos.h
include/tmdb/common/types/: CastAndCrew.h  Genre.h  Languages.h  People.h  ProductionCompany.h  ProductionCountry.h  Types.h  Videos.h
include/tmdb/movie/: AlternativeTitle.h  CastAndCrew.h  CastNCrew.h  Keywords.h  Movie.h  Types.h  Videos.h
include/tmdb/tv/: TV.h  Types.h
src/tmdb/: ApiGet.cpp  ApiGetJson.cpp  Configuration.cpp  ImageDownloader.cpp  Iso.cpp  configuration.cpp  iso.cpp
src/tmdb/common/: CastAndCrew.cpp  Videos.cpp
src/tmdb/movie/: AlternativeTitle.cpp  CastAndCrew.cpp  CastNCrew.cpp  Keywords.cpp  Movie.cpp  Videos.cpp
src/tmdb/tv/: TV.cpp
templates/: config.h.in
tests/: CMakeLists.txt  test.cpp
